
Changelog for Structure Synth:
-------------------------
23 Mar 09 [MHC] Changed to Qt 4.5.0
				Added close icon to tabs.
				Compiler settings: now global optimization, SSE2 instructions, fast fp-math. (much more responsive!)
				
18 Mar 09 [MHC] Fixed a bug where a recursive rule not producing objects could fill memory (making system very unresponsive)
                Added export of background color to templates.
                Added templates by Neon22 and Groovelock to SVN.

17 Feb 09 [MHC] Added 'blend {color} {strenght}' operator
[1h]

15 Feb 09 [MHC] Continued work on GUI for vars. Floats working now. Needs polish. 
[3h]

11 Feb 09 [MHC] Added 'set seed initial' for syncing random seed. This required adding a seed field to each state.
[3h]

09 Feb 09 [MHC] Added 'set maxsize ...' and 'set minsize ...'.
[2h]            Started working on a Sunflow-Ward template.

02 Feb 09 [MHC] Web: updated references, Added icons for downloads.
[1h Adm]

29 Jan 09 [MHC] Added support for specifying a startup .es file on the Commandline (this makes file associations possible). Notice this should work with Unicode paths.
[1h]            Added support for drag'and'drop (drop a .es file onto the clipboard...)
                -> TODO: Check on Linux/Mac.
                BugFix: The scroll can now be used to zoom again.

----- Release of v0.9.0 (Glasnost) [23 Jan 2009 ] ----------------------------------------------------------
This release: 33 hours of work (30 hours coding + 3 hours non-coding). 15 log entries.
Stats total: 166 hours of work (122 hours coding + 44 hours non-coding). 85 log entries.


23 Jan 09 [MHC] Created builds and updated webpages.
[2hA]

21 Jan 09 [MHC] Template Renderer: Missing primitives no longer cancels the renderer
[2h]            OpenGL renderer now turns off GLWidget when rendering...
                Add 'FastRotate' button. 

20 Jan 09 [MHC] Fixed CR+CR+LF export bug.
[3h]            Fixed infoText bg color.